# TFG_RelatedWork

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
CodeTalker/: .gitignore
CodeTalker/MEAD/: FLAME2020_generic_model.pkl
CodeTalker/RUN/MEAD/MEAD_stage1/: events.out.tfevents.1739781164.s184  (+31 more)
CodeTalker/config/BIWI/: demo.yaml  stage1.yaml  stage2.yaml
CodeTalker/config/MEAD/: demo.yaml  stage1.yaml  stage2.yaml
CodeTalker/config/RAVDESS/: demo.yaml  stage1.yaml  stage2.yaml
CodeTalker/config/vocaset/: demo.yaml  stage1.yaml  stage2.yaml
CodeTalker/data/MEAD/: vertices_npy
CodeTalker/dataset/: data_loader.py
CodeTalker/main/: demo.py  demo_npyonly.py  test_pred.py  test_vq.py  train_pred.py  train_vq.py
CodeTalker/models/: __init__.py  stage2.py
CodeTalker/models/lib/: wav2vec.py
CodeTalker/scripts/: demo_npyonly_loop.sh  train.sh
DiffPoseTalk/: README.md  demo.py  demo_coeffonly.py  extract_style.py  inference.py  main_dpt.py  main_se.py  scheduler.py
DiffPoseTalk/data/: __init__.py  dataset.py
DiffPoseTalk/models/: __init__.py  common.py  diff_talking_head.py  flame.py  hubert.py  lbs.py  style_encoder.py  wav2vec.py
DiffPoseTalk/models/data/: README.md
DiffPoseTalk/options/: dpt.py  se.py
DiffPoseTalk/setup/: fetch_data.sh  requirements.txt
DiffPoseTalk/utils/: common.py  media.py  renderer.py  rotation_conversions.py
FaceDiffuser/: data_loader.py  main.py  models.py  predict_npyonly.py
FaceDiffuser/data/MEAD/: wav
FaceFormer/: data_loader.py  demo.py  demo_npyonly.py  faceformer.py  main.py  wav2vec.py
