[project]
name = "tfg-relatedwork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.16,<3.11"
dependencies = [
    "einops>=0.8.1",
    "imageio>=2.37.0",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.4",
    "matplotlib-inline>=0.1.7",
    "moviepy>=1.0.3",
    "numba>=0.60.0",
    "numpy==1.23.5",
    "opencv-python>=4.8.1.78",
    "pandas>=2.1.0",
    "pillow>=11.1.0",
    "pydub>=0.25.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "tensorboard-data-server>=0.7.2",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "trimesh>=4.6.2",
    "wandb>=0.19.6",
    "chumpy",
    "sacremoses>=0.1.1",
    "tokenizers==0.10.1",
    "transformers==4.11.3",
]

[tool.uv]
no-build-isolation-package = ["chumpy"]